Changes in 4.5.0

* Minimum system requirement: PHP 5.2
* Modern default site theme (responsive, HTML5, CSS3)
* Choice of HTML5 or XHTML document type as a preference
* Textile 2.4
* User interface realignment and clean-up
* Write panel and plugin panel save changes without page refreshes (AJAX)
* WordPress import tool imports image media attachemnts as article images, can use 'utf8' or 'latin1' source databases
* New advanced preference "Login info email address" allows to define a 'From:' address from which  a new user's login info is sent
* Check for new Textpattern version moved from Preferences to Diagnostics panel
* Removed raw PHP support in pages and articles
* Plugin status is preserved across plugin updates
* <txp:link_to_prev> and <txp:link_to_next> adhere to the sort order set by <txp:article>
* Deprecated 'escape' attribute for <txp:search_term />
* Removed 'align' attribute for <txp:image />, <txp:thumbnail />, <txp:article_image />
* <txp:css /> accepts a comma-separated list of style-sheet names for the 'name' attribute
* <txp:txp_die />: New attribute 'url'. Specifies location target for HTTP stati 301, 302, 307
* <txp:article_custom>, <txp:file_download_list> preserve sorting order from 'id' attribute
* <txp:images /> preserves sorting order from article image ids
* <txp:file_download> may be used as a container tag
* New <txp:author_email> tag
* <txp:linklist /> accepts a comma-separated list of link ids in the new 'id' attribute
* Developer: Introduce gTxtScript() to help with the l10n of client-side strings
* Developer: Introduce txpspecialchars() as a recommended HTML5-safe alternative to htmlspecialchars()
* Developer: New events 'article_saved', 'article_posted', 'comment.saved', 'article_ui'.'partials_meta', 'article_ui'.'validate_save', 'image_ui'.'fullsize_image', 'image_ui'.'thumbnail_image' (NB: 'image_ui'.'image_edit' and 'image_ui'.'thumbnail_edit' changed)
* Developer: Introduce textpattern.Relay, a pub/sub hub for client-side events